test/fixtures/compile/class/class.throws.error.notry.error
SyntaxException: An error "SyntaxError" is unreported, it must be caught or declared to be thrown (line 20, file "fixtures/compile/class/class.throws.error.notry.ks")